[gd_scene load_steps=3 format=3 uid="uid://dx2wlbq1tg7cm"]

[ext_resource type="PackedScene" uid="uid://iumm6yo4wle2" path="res://scenes/base_entity_2d.tscn" id="1_wxr7h"]
[ext_resource type="Script" path="res://scripts/emitter_2d.gd" id="2_ks2dd"]

[node name="Emitter2D" groups=["emitter_2d"] instance=ExtResource("1_wxr7h")]
script = ExtResource("2_ks2dd")
emission_delay = 0.3
start_delay = -1.0
emission_count = 20
max_emissions = -1
time_between_entities = -1.0
entity_speed = 160.0
wave_degree_offset = 10.0
mirrored = false
emitted_life_time = 10.0
max_angle = 360.0
emission_distance = 0.0
entity_radius = 5.0
emitter_sprite = 1
entity_sprite = 2

[node name="EmissionTimer" type="Timer" parent="." index="4"]
wait_time = 99999.0

[node name="DelayedStartTimer" type="Timer" parent="." index="5"]
one_shot = true

[connection signal="timeout" from="EmissionTimer" to="." method="_on_emission_timer_timeout"]
[connection signal="timeout" from="DelayedStartTimer" to="." method="_on_delayed_start_timer_timeout"]
